--- a/7-2017-q4-major/Dockerfile
+++ b/7-2017-q4-major/Dockerfile
@@ -12,6 +12,6 @@ RUN mkdir /builds && \
     apt-get autoremove -y && \
     apt-get clean
 
-ENV PATH=$PATH:/opt/gcc-arm-none-eabi-7-2017-q4-major/bin
+ENV PATH=/opt/gcc-arm-none-eabi-7-2017-q4-major/bin:$PATH
 
 WORKDIR /builds
