Add install python3 and python3-pip

--- a/7-2017-q4-major/Dockerfile
+++ b/7-2017-q4-major/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:18.04
 RUN mkdir /builds && \
     apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y make cmake zip curl wget git doxygen graphviz && \
+    apt-get install -y make cmake zip curl wget git doxygen graphviz python3 python3-pip && \
     wget -O archive.tar.bz2 "https://developer.arm.com/-/media/Files/downloads/gnu-rm/7-2017q4/gcc-arm-none-eabi-7-2017-q4-major-linux.tar.bz2?revision=375265d4-e9b5-41c8-bf23-56cbe927e156?product=GNU%20Arm%20Embedded%20Toolchain,64-bit,,Linux,7-2017-q4-major" && \
     echo d3b00ae09e847747ef11316a8b04989a archive.tar.bz2 > /tmp/archive.md5 && md5sum -c /tmp/archive.md5 && rm /tmp/archive.md5 && \
     tar xf archive.tar.bz2 -C /opt && \
